--- a/5. FDscheme.ipynb
+++ b/5. FDscheme.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,24 +25,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q9/8vn_nzj55b55_336zczh1y2c0000gp/T/ipykernel_1449/4283525373.py:6: RuntimeWarning: divide by zero encountered in divide\n",
+      "/var/folders/q9/8vn_nzj55b55_336zczh1y2c0000gp/T/ipykernel_2316/4283525373.py:6: RuntimeWarning: divide by zero encountered in divide\n",
       "  return (phi_a-phi_n)/phi_a*100\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc08ffa1e20>]"
+       "[<matplotlib.lines.Line2D at 0x7fb0bb0fc8e0>]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,6 @@
     "    for j in range(1,N-1):\n",
     "        \n",
     "        k = (j-1)*N + i\n",
-    "\n",
     "        M[k,k] = -2/dx**2 - 2/dy**2\n",
     "        M[k,k-1] = 1/dx**2\n",
     "        M[k,k+1] = 1/dx**2\n",
@@ -318,6 +317,7 @@
     "i = N-1 \n",
     "for j in range(N):\n",
     "    k = (j-1)*N + i\n",
+    "\n",
     "    y = j*dy\n",
     "    x = i*dx\n",
     "    M[k,k] = 1\n",
@@ -353,16 +353,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7fc090b07f70>"
+       "<matplotlib.colorbar.Colorbar at 0x7fb0bbac4610>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
