Added completed exercises.
Update the folder structure

--- a/5. FDscheme.ipynb
+++ b/5. FDscheme.ipynb
@@ -15,12 +15,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Uniform grid\n",
     "Construct a matrix solver for Finite Difference Method and using Central difference scheme for \n",
-    "<img src=\"FDquestion1.png\">\n"
+    "<img src=\"img/FDquestion1.png\">\n"
    ]
   },
   {
@@ -119,13 +120,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Streching grid\n",
-    "<img src=\"FDquestion2.png\">Strech factor=1.02\n",
-    "<img src=\"FDStrechGridSchemetic.png\">\n",
-    "<img src=\"FDStrechGridEqn.png\">"
+    "<img src=\"img/FDquestion2.png\">Strech factor=1.02\n",
+    "<img src=\"img/FDStrechGridSchemetic.png\">\n",
+    "<img src=\"img/FDStrechGridEqn.png\">"
    ]
   },
   {
@@ -473,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 12:59:45) \n[Clang 10.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
