--- a/6.Iterative solvers.ipynb
+++ b/6.Iterative solvers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,10 +17,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"FDMexample.png\">"
+    "<img src=\"img/FDMexample.png\">"
    ]
   },
   {
@@ -217,11 +218,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def TRI(N,a,d,c,Q):\n",
+    "    '''\n",
+    "    ┌                                        ┐\n",
+    "    │  d1  c1  0 ...                        0│\n",
+    "    │  a1  d2  c2  0 ...                    0│\n",
+    "    │        .                               │\n",
+    "    │          .                             │\n",
+    "    │            .                           │┌     ┐  ┌     ┐\n",
+    "    │... 0   ai-2  di-1  ci-1 0  ...         ││Phi_x│= | Q_x |\n",
+    "    │                  .                     │└     ┘  └     ┘\n",
+    "    │                   .                    │\n",
+    "    │                    .                   │\n",
+    "    │0     ... 0   aN-2  dN-1  cN-1  0  ...  │\n",
+    "    │0         ... 0   aN-1  dN    0  ...    │ \n",
+    "    └                                        ┘\n",
+    "    '''\n",
     "    # Tridiagonal matrix solver\n",
     "    phi = np.zeros(N)\n",
     "\n",
@@ -244,29 +260,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r  1%|          | 857/100000 [00:09<17:32, 94.22it/s]"
+      "  0%|          | 369/100000 [00:03<17:20, 95.77it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Residual:  1.1649958252764405e-06\n",
-      "Converged! Residual:  9.810257431926071e-07 Time elapsed:  9.109743118286133\n"
+      "Residual:  0.25013225331550865\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "  0%|          | 387/100000 [00:04<17:33, 94.59it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/cong/Desktop/Work zone/Fluids/FDM_FVM_Codes/6.Iterative solvers.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 24>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X11sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m     c[i] \u001b[39m=\u001b[39m aE\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X11sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m     \u001b[39m# RHS for Tri matrix\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X11sZmlsZQ%3D%3D?line=44'>45</a>\u001b[0m     Q[i] \u001b[39m=\u001b[39m S[i,j] \u001b[39m-\u001b[39m phi[i,j\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m*\u001b[39maN \u001b[39m-\u001b[39m phi[i,j\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m*\u001b[39maS\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X11sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m \u001b[39m# For Dirichlet BC\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X11sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m d[Nx\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -315,7 +341,7 @@
     "            c[i] = aE\n",
     "            \n",
     "            # RHS for Tri matrix\n",
-    "            Q[i] = S[i,j] - phi[i,j+1]*aN - phi[i,j-1]*aE\n",
+    "            Q[i] = S[i,j] - phi[i,j+1]*aN - phi[i,j-1]*aS\n",
     "\n",
     "        # For Dirichlet BC\n",
     "        d[Nx-1]=1\n",
@@ -447,17 +473,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Stone's strongly implicit method\n",
-    "<img src=\"stones implicit method.png\">\n",
-    "<img src=\"stones code snippet.png\">"
+    "<img src=\"img/stones implicit method.png\">\n",
+    "<img src=\"img/stones code snippet.png\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,42 +576,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 372/100000 [01:09<4:51:25,  5.70it/s]"
+      "\r  0%|          | 11/100000 [00:02<5:39:57,  4.90it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Residual:  1.5155976999806526e-06\n"
+      "Residual:  1346.7444984442702\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 378/100000 [01:10<5:10:32,  5.35it/s]"
+      "  0%|          | 17/100000 [00:03<6:21:02,  4.37it/s]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converged! Residual:  9.734529914419123e-07 Time elapsed:  74.47821712493896\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/cong/Desktop/Work zone/Fluids/FDM_FVM_Codes/6.Iterative solvers.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 94>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X16sZmlsZQ%3D%3D?line=127'>128</a>\u001b[0m Y \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmatmul(np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39minv(L),R)\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X16sZmlsZQ%3D%3D?line=129'>130</a>\u001b[0m \u001b[39m# Step 6\u001b[39;00m\n\u001b[0;32m--> <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X16sZmlsZQ%3D%3D?line=130'>131</a>\u001b[0m delta \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmatmul(np\u001b[39m.\u001b[39;49mlinalg\u001b[39m.\u001b[39;49minv(U) , Y)\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X16sZmlsZQ%3D%3D?line=132'>133</a>\u001b[0m phi \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m delta\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X16sZmlsZQ%3D%3D?line=133'>134</a>\u001b[0m \u001b[39m# print(delta)\u001b[39;00m\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36minv\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/numpy/linalg/linalg.py:552\u001b[0m, in \u001b[0;36minv\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m    550\u001b[0m signature \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mD->D\u001b[39m\u001b[39m'\u001b[39m \u001b[39mif\u001b[39;00m isComplexType(t) \u001b[39melse\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39md->d\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m    551\u001b[0m extobj \u001b[39m=\u001b[39m get_linalg_error_extobj(_raise_linalgerror_singular)\n\u001b[0;32m--> 552\u001b[0m ainv \u001b[39m=\u001b[39m _umath_linalg\u001b[39m.\u001b[39;49minv(a, signature\u001b[39m=\u001b[39;49msignature, extobj\u001b[39m=\u001b[39;49mextobj)\n\u001b[1;32m    553\u001b[0m \u001b[39mreturn\u001b[39;00m wrap(ainv\u001b[39m.\u001b[39mastype(result_t, copy\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m))\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -599,6 +625,7 @@
     "Nx = 41\n",
     "Ny = 41\n",
     "L = 1  # length\n",
+    "H = 1  # height\n",
     "phi = np.zeros((Nx*Ny))\n",
     "S = np.zeros((Nx*Ny))\n",
     "\n",
@@ -613,7 +640,7 @@
     "aS = 1 / dy ** 2\n",
     "a0 = -(2 / dx ** 2 + 2 / dy ** 2)\n",
     "\n",
-    "phi, S = prepare_phi_and_S(Nx,Ny,phi,L,convert_to_K=True)\n",
+    "phi, S = prepare_phi_and_S(Nx,Ny,phi,L,H,convert_to_K=True)\n",
     "\n",
     "L = np.zeros((Nx ** 2, Ny ** 2))\n",
     "U = np.zeros((Nx ** 2, Ny ** 2))\n",
@@ -865,7 +892,7 @@
     "phi, S = prepare_phi_and_S(N,M,phi,L,convert_to_K=True)\n",
     "\n",
     "# Same coefficient name as Stone's method\n",
-    "K = N**2\n",
+    "K = Nx*Ny\n",
     "B = np.full(K, aS)\n",
     "D = np.full(K, aW)\n",
     "E = np.full(K, a0)\n",
@@ -879,6 +906,7 @@
     "    # Step 4\n",
     "    # Calculate residual\n",
     "    R2sum = 0\n",
+    "    R = np.zeros((Nx,Ny))\n",
     "    for i in range(1, Nx - 1):\n",
     "\n",
     "        for j in range(1, Ny - 1):\n",
