--- a/6.Iterative solvers.ipynb
+++ b/6.Iterative solvers.ipynb
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 3026/10000 [00:14<00:33, 207.93it/s]"
+      " 30%|███       | 3039/10000 [00:14<00:32, 213.13it/s]"
      ]
     },
     {
@@ -54,14 +54,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 34%|███▍      | 3407/10000 [00:16<00:32, 203.95it/s]"
+      " 34%|███▍      | 3407/10000 [00:16<00:31, 211.25it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converged! Residual:  9.988058240720717e-07 Time elapsed:  16.722319841384888\n"
+      "Converged! Residual:  9.988058240720717e-07 Time elapsed:  16.14183521270752\n"
      ]
     },
     {
@@ -78,6 +78,7 @@
     "Nx = 41\n",
     "Ny = 41\n",
     "L = 1   # length\n",
+    "H = 1   # length\n",
     "M = np.zeros((Nx,Ny)) # an empty matrix\n",
     "S = np.zeros((Nx,Ny))\n",
     "phi = np.zeros((Nx,Ny))\n",
@@ -92,7 +93,7 @@
     "aS = 1/dy**2\n",
     "a0 = -(2/dx**2 + 2/dy**2)\n",
     "\n",
-    "phi, S = prepare_phi_and_S(Nx, Ny, phi, L)\n",
+    "phi, S = prepare_phi_and_S(Nx, Ny, phi, L,H)\n",
     "\n",
     "for _ in tqdm(range(10000)):\n",
     "\n",
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,39 +261,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 369/100000 [00:03<17:20, 95.77it/s]"
+      "\r  1%|          | 857/100000 [00:09<17:50, 92.64it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Residual:  0.25013225331550865\n"
+      "Residual:  1.1649958252764405e-06\n",
+      "Converged! Residual:  9.810257431926071e-07 Time elapsed:  9.264343023300171\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 387/100000 [00:04<17:33, 94.59it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/cong/Desktop/Work zone/Fluids/FDM_FVM_Codes/6.Iterative solvers.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 24>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X11sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m     c[i] \u001b[39m=\u001b[39m aE\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X11sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m     \u001b[39m# RHS for Tri matrix\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X11sZmlsZQ%3D%3D?line=44'>45</a>\u001b[0m     Q[i] \u001b[39m=\u001b[39m S[i,j] \u001b[39m-\u001b[39m phi[i,j\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m*\u001b[39maN \u001b[39m-\u001b[39m phi[i,j\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m*\u001b[39maS\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X11sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m \u001b[39m# For Dirichlet BC\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X11sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m d[Nx\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\n"
      ]
     }
    ],
@@ -302,6 +293,7 @@
     "Nx = 41\n",
     "Ny = 41\n",
     "L = 1   # length\n",
+    "H = 1   # length\n",
     "M = np.zeros((Nx,Ny)) # an empty matrix\n",
     "phi = np.zeros((Nx,Ny))\n",
     "S = np.zeros((Nx,Ny))\n",
@@ -317,7 +309,7 @@
     "aS = 1/dy**2\n",
     "a0 = -(2/dx**2 + 2/dy**2)\n",
     "\n",
-    "phi, S = prepare_phi_and_S(Nx, Ny, phi, L)\n",
+    "phi, S = prepare_phi_and_S(Nx, Ny, phi, L,H)\n",
     "\n",
     "    \n",
     "for _ in tqdm(range(100000)):\n",
@@ -484,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,95 +514,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def matrixA(Nx,Ny):\n",
-    "    A = np.zeros((Nx ** 2, Ny ** 2))\n",
-    "\n",
-    "    ## Right BC\n",
-    "    i = Nx - 1\n",
-    "    for j in range(Ny):\n",
-    "        x = i * dx\n",
-    "        y = j * dy\n",
-    "\n",
-    "        k = (j - 1) * Ny + i\n",
-    "        A[k, k] = 1\n",
-    "\n",
-    "    ## left BC\n",
-    "    i = 0\n",
-    "    for j in range(Ny):\n",
-    "        x = i * dx\n",
-    "        y = j * dy\n",
-    "        k = (j - 1) * Ny + i\n",
-    "        A[k, k] = 1\n",
-    "    ## Bottom BC\n",
-    "    j = 0\n",
-    "    for i in range(Nx):\n",
-    "        x = i * dx\n",
-    "        y = j * dy\n",
-    "        k = (j - 1) * Ny + i\n",
-    "        A[k, k] = 1\n",
-    "    ## Top BC\n",
-    "    j = Ny - 1\n",
-    "    for i in range(Nx):\n",
-    "        x = i * dx\n",
-    "        y = j * dy\n",
-    "        k = (j - 1) * Ny + i\n",
-    "        A[k, k] = 1\n",
-    "\n",
-    "    for i in range(1, Nx - 1):\n",
-    "\n",
-    "        for j in range(1, Ny - 1):\n",
-    "            k = (j - 1) * Ny + i\n",
-    "            A[k, k] = -2 / dx ** 2 - 2 / dy ** 2\n",
-    "            A[k, k - 1] = 1 / dx ** 2\n",
-    "            A[k, k + 1] = 1 / dx ** 2\n",
-    "\n",
-    "            A[k, k - N] = 1 / dy ** 2\n",
-    "            A[k, k + N] = 1 / dy ** 2\n",
-    "\n",
-    "    return A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r  0%|          | 11/100000 [00:02<5:39:57,  4.90it/s]"
+      "\r  0%|          | 371/100000 [01:14<5:20:57,  5.17it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Residual:  1346.7444984442702\n"
+      "Residual:  1.5155976999806526e-06\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 17/100000 [00:03<6:21:02,  4.37it/s]\n"
+      "  0%|          | 378/100000 [01:16<5:36:08,  4.94it/s]"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/cong/Desktop/Work zone/Fluids/FDM_FVM_Codes/6.Iterative solvers.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 94>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X16sZmlsZQ%3D%3D?line=127'>128</a>\u001b[0m Y \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmatmul(np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39minv(L),R)\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X16sZmlsZQ%3D%3D?line=129'>130</a>\u001b[0m \u001b[39m# Step 6\u001b[39;00m\n\u001b[0;32m--> <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X16sZmlsZQ%3D%3D?line=130'>131</a>\u001b[0m delta \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmatmul(np\u001b[39m.\u001b[39;49mlinalg\u001b[39m.\u001b[39;49minv(U) , Y)\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X16sZmlsZQ%3D%3D?line=132'>133</a>\u001b[0m phi \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m delta\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/6.Iterative%20solvers.ipynb#X16sZmlsZQ%3D%3D?line=133'>134</a>\u001b[0m \u001b[39m# print(delta)\u001b[39;00m\n",
-      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36minv\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/numpy/linalg/linalg.py:552\u001b[0m, in \u001b[0;36minv\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m    550\u001b[0m signature \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mD->D\u001b[39m\u001b[39m'\u001b[39m \u001b[39mif\u001b[39;00m isComplexType(t) \u001b[39melse\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39md->d\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m    551\u001b[0m extobj \u001b[39m=\u001b[39m get_linalg_error_extobj(_raise_linalgerror_singular)\n\u001b[0;32m--> 552\u001b[0m ainv \u001b[39m=\u001b[39m _umath_linalg\u001b[39m.\u001b[39;49minv(a, signature\u001b[39m=\u001b[39;49msignature, extobj\u001b[39m=\u001b[39;49mextobj)\n\u001b[1;32m    553\u001b[0m \u001b[39mreturn\u001b[39;00m wrap(ainv\u001b[39m.\u001b[39mastype(result_t, copy\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m))\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converged! Residual:  9.734529914419123e-07 Time elapsed:  80.38189005851746\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -642,36 +581,36 @@
     "\n",
     "phi, S = prepare_phi_and_S(Nx,Ny,phi,L,H,convert_to_K=True)\n",
     "\n",
-    "L = np.zeros((Nx ** 2, Ny ** 2))\n",
-    "U = np.zeros((Nx ** 2, Ny ** 2))\n",
+    "L = np.eye(Nx ** 2, Ny ** 2)\n",
+    "U = np.eye(Nx ** 2, Ny ** 2)\n",
     "\n",
     "\n",
     "\n",
-    "## Right BC\n",
-    "i = Nx - 1\n",
-    "for j in range(1,Ny-1):\n",
-    "    k = (j - 1) * Nx + i\n",
-    "    L[k, k] = 1\n",
-    "    U[k, k] = 1\n",
+    "# ## Right BC\n",
+    "# i = Nx - 1\n",
+    "# for j in range(1,Ny-1):\n",
+    "#     k = (j - 1) * Nx + i\n",
+    "#     L[k, k] = 1\n",
+    "#     U[k, k] = 1\n",
     "\n",
-    "## left BC\n",
-    "i = 0\n",
-    "for j in range(1,Ny-1):\n",
-    "    k = (j - 1) * Nx + i\n",
-    "    L[k, k] = 1\n",
-    "    U[k, k] = 1\n",
-    "## Bottom BC\n",
-    "j = 0\n",
-    "for i in range(Nx):\n",
-    "    k = (j - 1) * Nx + i\n",
-    "    L[k, k] = 1\n",
-    "    U[k, k] = 1\n",
-    "## Top BC\n",
-    "j = Ny - 1\n",
-    "for i in range(Nx):\n",
-    "    k = (j - 1) * Nx + i\n",
-    "    L[k, k] = 1\n",
-    "    U[k, k] = 1\n",
+    "# ## left BC\n",
+    "# i = 0\n",
+    "# for j in range(1,Ny-1):\n",
+    "#     k = (j - 1) * Nx + i\n",
+    "#     L[k, k] = 1\n",
+    "#     U[k, k] = 1\n",
+    "# ## Bottom BC\n",
+    "# j = 0\n",
+    "# for i in range(Nx):\n",
+    "#     k = (j - 1) * Nx + i\n",
+    "#     L[k, k] = 1\n",
+    "#     U[k, k] = 1\n",
+    "# ## Top BC\n",
+    "# j = Ny - 1\n",
+    "# for i in range(Nx):\n",
+    "#     k = (j - 1) * Nx + i\n",
+    "#     L[k, k] = 1\n",
+    "#     U[k, k] = 1\n",
     "\n",
     "aE = 1 / dx ** 2\n",
     "aW = 1 / dx ** 2\n",
@@ -1040,6 +979,7 @@
     }
    ],
    "source": [
+    "from utilities import matrixA\n",
     "start = time.time()\n",
     "N = 41\n",
     "M = 41\n",
@@ -1411,7 +1351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 12:59:45) \n[Clang 10.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
