--- a/6.Iterative solvers.ipynb
+++ b/6.Iterative solvers.ipynb
@@ -951,23 +951,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 147/100000 [00:00<04:48, 346.54it/s]"
+      "  0%|          | 152/100000 [00:00<05:41, 292.04it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alpha: -0.0001563042553218626\n",
-      "Residual:  0.2648136921401258\n",
-      "Converged! Residual:  7.52811495486506e-07 Time elapsed:  0.4489479064941406\n"
+      "alpha: -0.00026050584850732773\n",
+      "Residual:  0.31847237237735\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 185/100000 [00:00<05:44, 289.34it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converged! Residual:  7.616627714156757e-07 Time elapsed:  0.6599900722503662\n"
      ]
     },
     {
@@ -998,9 +1011,9 @@
     "aS = 1 / dy ** 2\n",
     "a0 = -(2 / dx ** 2 + 2 / dy ** 2)\n",
     "\n",
-    "phi, S = prepare_phi_and_S(N,M,phi,L,convert_to_K=True)\n",
+    "phi, S = prepare_phi_and_S(N,M,phi,L,L,convert_to_K=True)\n",
     "\n",
-    "A = matrixA(N,M)\n",
+    "A = matrixA(N,M,dx,dy)\n",
     "\n",
     "# Initial residual\n",
     "R = S - A@phi\n",
@@ -1026,9 +1039,9 @@
     "    phi = phi + alpha_new*D\n",
     "    \n",
     "    # Compute residual\n",
-    "    R2sum_new, R = residual(N,M,phi,S,aE,aW,aN,aS,a0)\n",
+    "    R2_new, R2sum_new, R = residual(N,M,phi,S,aE,aW,aN,aS,a0, convert=True)\n",
     "\n",
-    "    R2_new = np.sqrt(R2sum_new)\n",
+    "    \n",
     "\n",
     "    beta = R2_new**2 / R2_old**2\n",
     "\n",
@@ -1041,7 +1054,7 @@
     "    \n",
     "    if _ % 100 == 0:\n",
     "        clear_output(True)\n",
-    "        print(f'alpha: {alpha}')\n",
+    "        print(f'alpha: {alpha_new}')\n",
     "        print(\"Residual: \", R2_new)\n",
     "\n",
     "    if R2_new < tol:\n",
@@ -1351,7 +1364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8 (default, Apr 13 2021, 12:59:45) \n[Clang 10.0.0 ]"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
