--- a/6.Iterative solvers.ipynb
+++ b/6.Iterative solvers.ipynb
@@ -33,50 +33,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 3039/10000 [00:14<00:32, 213.13it/s]"
+      " 95%|█████████▌| 9512/10000 [02:57<00:09, 53.20it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Residual: 1.2329210213311063e-05\n"
+      "Residual: 0.0010803737941755575\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 34%|███▍      | 3407/10000 [00:16<00:31, 211.25it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converged! Residual:  9.988058240720717e-07 Time elapsed:  16.14183521270752\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 10000/10000 [03:06<00:00, 53.74it/s]\n"
      ]
     }
    ],
    "source": [
     "# numbering scheme used is k = (j-1)*N + i\n",
     "start = time.time()\n",
-    "Nx = 41\n",
-    "Ny = 41\n",
+    "Nx = 81\n",
+    "Ny = 81\n",
     "L = 1   # length\n",
     "H = 1   # length\n",
     "M = np.zeros((Nx,Ny)) # an empty matrix\n",
@@ -585,33 +571,6 @@
     "U = np.eye(Nx ** 2, Ny ** 2)\n",
     "\n",
     "\n",
-    "\n",
-    "# ## Right BC\n",
-    "# i = Nx - 1\n",
-    "# for j in range(1,Ny-1):\n",
-    "#     k = (j - 1) * Nx + i\n",
-    "#     L[k, k] = 1\n",
-    "#     U[k, k] = 1\n",
-    "\n",
-    "# ## left BC\n",
-    "# i = 0\n",
-    "# for j in range(1,Ny-1):\n",
-    "#     k = (j - 1) * Nx + i\n",
-    "#     L[k, k] = 1\n",
-    "#     U[k, k] = 1\n",
-    "# ## Bottom BC\n",
-    "# j = 0\n",
-    "# for i in range(Nx):\n",
-    "#     k = (j - 1) * Nx + i\n",
-    "#     L[k, k] = 1\n",
-    "#     U[k, k] = 1\n",
-    "# ## Top BC\n",
-    "# j = Ny - 1\n",
-    "# for i in range(Nx):\n",
-    "#     k = (j - 1) * Nx + i\n",
-    "#     L[k, k] = 1\n",
-    "#     U[k, k] = 1\n",
-    "\n",
     "aE = 1 / dx ** 2\n",
     "aW = 1 / dx ** 2\n",
     "aN = 1 / dy ** 2\n",
@@ -660,26 +619,27 @@
     "            R[k] = S[k] - aE * phi[k + 1] - aW * phi[k - 1] - aN * phi[k + Nx] - aS * phi[k - Nx] - a0 * phi[k]\n",
     "\n",
     "            R2 = R2 + R[k] ** 2\n",
+    "    '''\n",
+    "    # Another way to calculate residual, same as above, but memory inefficient.\n",
+    "    # Basically constructed whole A matrix and multiply with phi\n",
     "\n",
-    "# Another way to calculate residual, same as above, but memory inefficient.\n",
-    "# Basically constructed whole A matrix and multiply with phi\n",
+    "    # A = matrixA(N)\n",
+    "    # for _ in tqdm(range(100000)):\n",
+    "    #     # Step 4\n",
+    "    #     # Calculate residual\n",
+    "    #     R2 = 0\n",
+    "    #     s = time.time()\n",
+    "    #     R = S-np.matmul(A,phi)\n",
+    "        \n",
+    "    #     for i in range(1, N - 1):\n",
     "\n",
-    "# A = matrixA(N)\n",
-    "# for _ in tqdm(range(100000)):\n",
-    "#     # Step 4\n",
-    "#     # Calculate residual\n",
-    "#     R2 = 0\n",
-    "#     s = time.time()\n",
-    "#     R = S-np.matmul(A,phi)\n",
-    "    \n",
-    "#     for i in range(1, N - 1):\n",
+    "    #         for j in range(1, N - 1):\n",
+    "    #             x = i * dx\n",
+    "    #             y = j * dy\n",
+    "    #             k = (j - 1) * N + i\n",
+    "    #             R2 = R2 + R[k] ** 2\n",
     "\n",
-    "#         for j in range(1, N - 1):\n",
-    "#             x = i * dx\n",
-    "#             y = j * dy\n",
-    "#             k = (j - 1) * N + i\n",
-    "#             R2 = R2 + R[k] ** 2\n",
-    "\n",
+    "    '''\n",
     "    # Step 5\n",
     "    Y = np.matmul(np.linalg.inv(L),R)\n",
     "\n",
@@ -1364,7 +1324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 12:59:45) \n[Clang 10.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
