--- a/5. FDscheme.ipynb
+++ b/5. FDscheme.ipynb
@@ -272,13 +272,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 2D uniform grid\n",
-    "<img src=\"FDQ3_1.png\">\n",
-    "<img src=\"FDQ3_2.png\">\n",
-    "<img src=\"FDQ3_3.png\">"
+    "<img src=\"img/FDQ3_1.png\">\n",
+    "<img src=\"img/FDQ3_2.png\">\n",
+    "<img src=\"img/FDQ3_3.png\">"
    ]
   },
   {
