--- a/8.4 MGM_in_Module.ipynb
+++ b/8.4 MGM_in_Module.ipynb
@@ -229,10 +229,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0., 0., 0.]),\n",
+       " array([[1.00000000e+000, 1.00000000e+000, 1.00000000e+000],\n",
+       "        [0.00000000e+000, 1.50312627e-291, 1.50312627e-291],\n",
+       "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000]]))"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[5,-1,3],[-2,6,-2],[-1,0,2]])\n",
+    "L = np.array([[0,0,0],[-2/6,0,0],[-1/2,0,0]])\n",
+    "U = np.array([[0,-1/5,3/5],[0,0,-2/6],[0,0,0]])\n",
+    "\n",
+    "I = np.eye(U.shape[0])\n",
+    "\n",
+    "B = np.linalg.inv(I-U)@U\n",
+    "np.linalg.eig(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 1 is out of bounds for axis 1 with size 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/cong/Desktop/Work zone/Fluids/FDM_FVM_Codes/8.4 MGM_in_Module.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/8.4%20MGM_in_Module.ipynb#X22sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, Ny \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/8.4%20MGM_in_Module.ipynb#X22sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     phi[i, j] \u001b[39m=\u001b[39m phiR[j]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/8.4%20MGM_in_Module.ipynb#X22sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     S[i, j] \u001b[39m=\u001b[39m phiR[j]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/8.4%20MGM_in_Module.ipynb#X22sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m## left BC\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cong/Desktop/Work%20zone/Fluids/FDM_FVM_Codes/8.4%20MGM_in_Module.ipynb#X22sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m i \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 1 is out of bounds for axis 1 with size 1"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[5,-1,3],[-2,6,-2],[-1,0,2]])\n",
+    "S = np.array([[1],[2],[1]])\n",
+    "phi = np.zeros(A.shape[0])\n",
+    "Nx = A.shape[0]\n",
+    "Ny = A.shape[1]\n",
+    "## Right BC\n",
+    "i = Nx - 1\n",
+    "phiR = [-3,-2,2]\n",
+    "for j in range(1, Ny - 1):\n",
+    "    phi[i, j] = phiR[j]\n",
+    "    S[i, j] = phiR[j]\n",
+    "\n",
+    "## left BC\n",
+    "i = 0\n",
+    "phiL = [5,-2,-1]\n",
+    "for j in range(1, Ny - 1):\n",
+    "\n",
+    "    phi[i, j] = phiL[j]\n",
+    "    S[i, j] = phiL[j]\n",
+    "\n",
+    "## Bottom BC\n",
+    "j = 0\n",
+    "phiB = [-1,0,2]\n",
+    "for i in range(Nx):\n",
+    "\n",
+    "    phi[i, j] = phiB[i]\n",
+    "    S[i, j] = phiB[i]\n",
+    "\n",
+    "## Top BC\n",
+    "j = Ny - 1\n",
+    "phiT = [5,-1,-3]\n",
+    "for i in range(Nx):\n",
+    "\n",
+    "    phi[i, j] = phiT[i]\n",
+    "    S[i, j] = phiT[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(1,A.shape[0]-1):\n",
+    "    phi[i] = (S[i] - phi[i-1]-phi[i+1])*0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-4.84239901+0.j        ,  5.9211995 +1.13358618j,\n",
+       "         5.9211995 -1.13358618j]),\n",
+       " array([[ 0.26361041+0.j        , -0.01286885+0.61786042j,\n",
+       "         -0.01286885-0.61786042j],\n",
+       "        [-0.22179501+0.j        ,  0.76394515+0.j        ,\n",
+       "          0.76394515-0.j        ],\n",
+       "        [-0.9387846 +0.j        ,  0.01723078+0.18486159j,\n",
+       "          0.01723078-0.18486159j]]))"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.eig(a)"
+   ]
   }
  ],
  "metadata": {
